<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="settings_category_advanced">Advanced options</string>
    <string name="settings_category_advanced_summary">Clipboard, notifications, tunnels and extensions</string>
</resources>

